<resources>
    <string name="app_name">OqyApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- About tab -->


    <string name="about_version_label">Version</string>
    <string name="about_libraries_label">Used libraries</string>
    <string name="preference2_key">preference2</string>
    <!-- Navigation -->
    <string name="nav_book">Book</string>
    <string name="nav_about">About</string>
    <string name="nav_Timetable">TimeTable</string>
    <string name="nav_library">Library </string>
    <string name="nav_news">News </string>
    <string name="nav_reader">Reader</string>



    <string name="Post_Detail">Post detail </string>
    <string name="details">Details</string>
    <string name="version_app">1.0.0</string>
    <string name="layout">Layout</string>

    <string name="scan_your_first">Scan your first Barcode or QR Code to see the information here.</string>
    ]
</resources>
