<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
        android:id="@+id/book_nav"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/nav_book" />
        <item
            android:id="@+id/news_nav"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/reader_nav"
            android:icon="@drawable/ic_reader"
            android:title="@string/nav_reader" />
        <item
            android:id="@+id/schedule_nav"
            android:icon="@drawable/ic_schedule"
            android:title="@string/nav_Timetable" />

    </group>

    <item android:title="Other">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:checkable="true"
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_info"
                    android:title="@string/nav_about"/>

            </group>
        </menu>
    </item>

</menu>
